fixed image alignment across pages, etc.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .box {
-    height: 100%;
     padding: 20px;
     background: #fff;
   }
@@ -11,22 +10,6 @@
     justify-content: space-evenly;
   }
 
-.photo {
-    height: 95px;
-    width: 135px;
-    margin-bottom: 25px;
-}
-
-.photo2 {
-    max-width: 700px;
-}
-
-.resize {
-    max-width: 50%;
-    max-height: 50%;
-    float: left;
-}
-
 .outline {
     border: 3px solid #4AABA5
 }
@@ -35,7 +18,6 @@
   margin-left: 100px;
   margin-right: 100px;
 }
-
 body {
     background: #f1f1f1;
   }
@@ -67,12 +49,11 @@ h3 {
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 18px;
     color:#4AABA5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    text-align: left;
-    margin-left: 250px;
+    text-align: center;
     
 }
 
@@ -87,12 +68,13 @@ th {
 }
 
 
-/* Styles ONLY be applied at screen sizes below 800 pixels */
-@media (max-width: 900px) {
+/* Styles ONLY be applied at screen sizes below 880 pixels */
+@media (max-width: 880px) {
   .margins {
     margin-left: 0px;
     margin-right: 0px;
-  
-  }
-
+    }
+  .nav_color {
+    background-color: #4AABA5;
+    }
   }
